# Socio

./: Cargo.toml  Makefile  README.md
.github/: Pull_Request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CI.yml
.jenkins/: ci-checks.Jenkinsfile
config/: development.toml
crates/common_enums/: Cargo.toml
crates/common_utils/: Cargo.toml
crates/router/: Cargo.toml
crates/router/src/: configs.rs  lib.rs
crates/router/src/configs/: defaults.rs  settings.rs
crates/router/src/core/: errors.rs
crates/router/src/routes/: health.rs
crates/router/tests/: health.rs
docs/: contribution.md
