[package]
name = "router"
version = "0.2.0"
default-run = "router"
edition.workspace = true
rust-version.workspace = true

[dependencies]
common_enums = {path = "../common_enums"}
common_utils = {path = "../common_utils"}

#Third party crates
actix-web = "4.3.1"
tokio = "1.28.2"

[dev-dependencies]
actix-http = "3.3.1"
[[bin]]
name = "router"
path = "src/bin/router.rs"
