[package]
name = "router"
version = "0.2.0"
default-run = "router"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# First party crates
common_enums = {path = "../common_enums"}
common_utils = {path = "../common_utils"}

#Third party crates
actix-web = "4.3.1"
config = { version = "0.13.3", features = ["toml"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tokio = "1.28.2"
thiserror = "1.0.40"
error-stack = "0.3.1"
serde_path_to_error = "0.1.11"

[dev-dependencies]
actix-http = "3.3.1"

[[bin]]
name = "router"
path = "src/bin/router.rs"
